# Projects

Advent/: Advent.sln
Advent/1/: 1.csproj  Program.cs
Advent/2/: 2.csproj  Program.cs
Advent/3/: 3.csproj  Program.cs
Advent/4/: 4.csproj  Program.cs
Advent/5/: 5.csproj  Program.cs
Advent/6/: 6.csproj  Program.cs
Advent/7/: 7.csproj
AirportManager/: .dockerignore  .env  .gitignore  .gitlab-ci.yml  Dockerfile.dependencies  README.md  compose.yaml  locust_scenario.md  locust_scenario.py  pom.xml
AirportManager/airport-service/: Dockerfile  pom.xml
AirportManager/artemis-server/: Dockerfile  pom.xml
AirportManager/auth-gateway/: Dockerfile  pom.xml
AirportManager/auth-gateway/gateway/: pom.xml
AirportManager/docs/: security-scopes.drawio
AirportManager/flight-service/: Dockerfile  pom.xml
AirportManager/grafana/dashboards/: main-database.json
AirportManager/jms-events/: pom.xml
AirportManager/prometheus/: prometheus.yml
AirportManager/security/: pom.xml
AirportManager/steward-service/: Dockerfile  Makefile  pom.xml
Backrooms/: Backrooms.csproj  Backrooms.sln  README.md  debug.tscn  project.godot
Backrooms/Assets/3rd Party/: crt_grid.gdshader  crt_lines.gdshader  crt_material.tres
Backrooms/Generation/: BackroomsGenerator.cs  BackroomsGenerator.tscn  Ceilingn.tscn  room_1.tscn  room_2.tscn  room_3.tscn  room_4.tscn  room_5.tscn
Backrooms/Scenes/: Menu.tscn  Note.tscn  enemy.tscn  notes_debug_scene.cs  notes_debug_scene.tscn  player.tscn
Backrooms/Scenes/NoteManager/: NoteManager.cs  NoteManager.tscn
Backrooms/Scenes/Objects/: Note.cs
Backrooms/Scenes/WinScreen/: WinScreen.gd  WinScreen.tscn
Backrooms/Scripts/: Menu.cs  world.cs
Backrooms/Scripts/Components/: Vision.cs  Vision.tscn
Backrooms/Scripts/Enemy/: Enemy.cs
Backrooms/Scripts/Interfaces/: IInteractable.cs
Backrooms/Scripts/Player/: Head.cs  Player.cs
BookHub/BookHub/: BookHub.csproj  BookHub.http  DatabaseConfigExtensions.cs  Program.cs  appsettings.json
BookHub/BookHub.Mvc/: BookHub.Mvc.csproj  BookHubMvcIdentity.db  DatabaseConfigExtensions.cs  Program.cs  appsettings.Development.json  appsettings.json
BookHub/BookHub.Mvc/Controller/: AccountController.cs  AdminAuthorController.cs  AdminBookController.cs  AdminCouponController.cs  AdminGenreController.cs  AdminGiftCardController.cs  AdminHomeController.cs  AdminOrderController.cs  AdminPublisherController.cs  AdminUserController.cs  HomeController.cs  UserBookController.cs  UserCartController.cs  UserOrderController.cs  UserWishListController.cs
BookHub/BookHub.Mvc/Data/: ApplicationDbContext.cs
BookHub/BookHub.Mvc/Middleware/: RequestLoggingMiddleware.cs
BookHub/BookHub.Mvc/Migrations/: 20251023102421_InitialIdentity.Designer.cs  20251023102421_InitialIdentity.cs  ApplicationDbContextModelSnapshot.cs
BookHub/BookHub.Mvc/Models/: ApplicationUser.cs  ErrorViewModel.cs  LoginViewModel.cs  RegisterViewModel.cs
BookHub/BookHub.Mvc/Properties/: launchSettings.json
BookHub/BookHub.Mvc/Views/: _ViewImports.cshtml
BookHub/BookHub/Controller/: AuditLogController.cs  AuthorController.cs  BookController.cs  CartController.cs  CouponController.cs  GenreController.cs  GiftCardController.cs  OrderController.cs  PublisherController.cs  ReviewController.cs  UserController.cs  WishListController.cs
BookHub/BookHub/Extension/: CollectionWrapper.cs  ODataQueryDocumentFilter.cs
BookHub/BookHub/Middleware/: AutenticationTokenMiddleware.cs  GlobalExceptionMiddleware.cs  JwtTokenMiddleware.cs  RequestLoggingMiddleware.cs  ResponseFormattingMiddleware.cs
BookHub/BookHub/Properties/: launchSettings.json
BookHub/BusinessLayer/: BusinessLayer.csproj
BookHub/BusinessLayer/Cache/: CacheSettings.cs  CachedAuthorService.cs  CachedBookService.cs  CachedGenreService.cs  CachedPublisherService.cs
BookHub/BusinessLayer/Extension/: ODataExtensions.cs
BookHub/BusinessLayer/Facade/: CheckoutFacade.cs  ICheckoutFacade.cs
BookHub/BusinessLayer/Mapping/: AuthorMapper.cs  BookMapper.cs  CartItemMapper.cs  CartMapper.cs  CouponMapper.cs  EntityMapper.cs  GenreMapper.cs  GiftCardMapper.cs  OrderItemMapper.cs  OrderMapper.cs  PublisherMapper.cs  ReviewMapper.cs  UserMapper.cs  WishListItemMapper.cs  WishListMapper.cs
BookHub/BusinessLayer/Service/: AuthorService.cs  BookService.cs  CartService.cs  (+23 more)
BookHub/DataAccessLayer/: DataAccessLayer.csproj  IUnitOfWork.cs  UnitOfWork.cs
BookHub/Tests/: Tests.csproj
BookHub/docs/: TECHNICAL_OVERVIEW.md
BubuTracker/BubuTracker/: build.gradle.kts  settings.gradle.kts
Colonist/: README.md  client.html
Colonist/colonist/: .env.example  Cargo.toml
Colonist/docs/: functional_requirements.md  game_rules.md  pv281_colonist.vpp
DmCompanion/: .gitignore  README.md  analysis_options.yaml  firebase.json  lines.sh  pubspec.yaml
DmCompanion/lib/: firebase_options.dart  main.dart
DmCompanion/linux/: CMakeLists.txt  my_application.cc
DmCompanion/test/: widget_test.dart
DmCompanion/web/: index.html
DmCompanion/windows/: CMakeLists.txt
RssProxy/: .gitignore  CMakeLists.txt  LICENSE  README.md  SETUP.md  check-dependencies.ps1  compile_commands.json
RssProxy/.github/workflows/: ci.yml
RssProxy/Client/: CMakeLists.txt  Client.cpp  Client.h  httpclient.cpp  httpclient.h  main.cpp
RssProxy/Server/: CMakeLists.txt  Config.cpp  Config.h  FeedFetcher.cpp  FeedFetcher.h  FeedScheduler.cpp  FeedScheduler.h  README.md  UrlValidator.cpp  UrlValidator.h  config.ini  database.cpp  database.h  httpserver.cpp  httpserver.h  main.cpp  rssfetcher.cpp  rssfetcher.h  servercontroller.cpp  servercontroller.h
RssProxy/Tests/: CMakeLists.txt  tst_Config.cpp  tst_Database.cpp  tst_HttpServer.cpp  tst_UrlValidator.cpp
Tournament Manager/: .editorconfig  .gitlab-ci.yml
Tournament Manager/C# backend/: Program.cs  api.csproj  api.http  appsettings.json
Tournament Manager/backend/: .env.example  .eslintrc  .gitignore  docker-compose.yml  env.d.ts  package-lock.json  package.json  tsconfig.json
Tournament Manager/frontend/: .env  .gitignore  package-lock.json  package.json  tailwind.config.ts
(+708 files in other folders)
