cmake_minimum_required(VERSION 3.16)

project(Client LANGUAGES CXX)

if(NOT DEFINED CMAKE_PREFIX_PATH OR CMAKE_PREFIX_PATH STREQUAL "")
    set(_local_qt "${CMAKE_CURRENT_SOURCE_DIR}/../Tests/6.8.0/msvc2022_64")
    if(EXISTS "${_local_qt}/lib/cmake/Qt6/Qt6Config.cmake")
        list(PREPEND CMAKE_PREFIX_PATH "${_local_qt}")
    endif()
endif()

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core Network)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Network)

add_executable(Client
    main.cpp
    Client.h Client.cpp
)

target_link_libraries(Client PRIVATE
    Qt${QT_VERSION_MAJOR}::Core
    Qt${QT_VERSION_MAJOR}::Network
)

include(GNUInstallDirs)
install(TARGETS Client
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
